docs: classes
