# storage/api-docs/api-docs.json
@@ -138,9 +138,6 @@
                                                     },
                                                     "name": {
                                                         "type": "string"
-                                                    },
-                                                    "email": {
-                                                        "type": "string"
                                                     }
                                                 },
                                                 "type": "object"
@@ -248,6 +245,96 @@
                                         "message": {
                                             "type": "string",
                                             "example": "Класс успешно удалён!"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/classes/{id}/curriculum": {
+            "get": {
+                "tags": [
+                    "Классы"
+                ],
+                "summary": "Получение учебного плана (списка лекций) для конкретного класса",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "id класса",
+                        "required": true,
+                        "example": 1
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer",
+                                            "example": "3"
+                                        },
+                                        "name": {
+                                            "type": "string",
+                                            "maxLength": 255,
+                                            "example": "02-СВ"
+                                        },
+                                        "curriculums": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "order": {
+                                                        "type": "string"
+                                                    },
+                                                    "lecture": {
+                                                        "type": "array",
+                                                        "items": {
+                                                            "properties": {
+                                                                "id": {
+                                                                    "type": "integer"
+                                                                },
+                                                                "topic": {
+                                                                    "type": "string"
+                                                                },
+                                                                "description": {
+                                                                    "type": "string"
+                                                                }
+                                                            },
+                                                            "type": "object"
+                                                        }
+                                                    }
+                                                },
+                                                "type": "object"
+                                            },
+                                            "example": {
+                                                "id": 1,
+                                                "name": "02-СВ",
+                                                "curriculums": [
+                                                    {
+                                                        "order": 1,
+                                                        "lecture": {
+                                                            "id": 6,
+                                                            "topic": "Введение в ООП",
+                                                            "description": "В этой лекции вы познакомитесь с объектно ориентированным программированием на PHP. Вы узнаете о классах, интерфейсах, инкапсуляции и магических методах. В итоге поймете, для чего нужны классы как абстракция данных. Знание основ объектно ориентированного программирования пригодится, чтобы понимать плюсы и минусы кода с классами и объектами. Также это поможет использовать объекты для реализации программной логики. Этот курс подойдет тем, кто уже хорошо знаком с языком PHP. Чтобы учиться было проще, стоит заранее изучить курсы: «Основы PHP», «PHP: Массивы», «PHP: Ассоциативные массивы» и «PHP: Функции»."
+                                                        }
+                                                    },
+                                                    {
+                                                        "order": 2,
+                                                        "lecture": {
+                                                            "id": 5,
+                                                            "topic": "Объектно-ориентированный дизайн",
+                                                            "description": "В этой лекции вы познакомитесь с объектно ориентированным дизайном. Вы узнаете о паттернах, текучем интерфейсе и полезных популярных библиотеках. В итоге поймете, как правильно организовывать код, написанный на классах. Знания объектно ориентированного дизайна пригодятся, чтобы создавать и использовать цепочки функций, в том числе в неизменяемом стиле. Также они помогут правильно организовывать состояние объектов и проектировать безопасные сеттеры. Этот курс подойдет тем, кто уже хорошо знаком с языком PHP. Чтобы учиться было проще, стоит заранее изучить курсы: «Основы PHP», «PHP: Массивы», «PHP: Ассоциативные массивы» и «PHP: Функции»."
+                                                        }
+                                                    }
+                                                ]
+                                            }
                                         }
                                     },
                                     "type": "object"
